--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ html, body{
 .navbar-link {
   font-size: 1.1em !important;
 }
+.navbar-logo {
+  font-size: 1em;
+  padding-bottom: 10rem;
+  color: #2f4f4f;
+  text-shadow: .5px .5px 3px #ffebcd;
+  top: 50%;
+  transform: translateY(-50%);
+}
 .carousel-inner img {
   width: 100%;
   height: 100%;
@@ -34,6 +42,9 @@ html, body{
   font-weight: 500%;
   text-shadow: 1px 1px 10px #000;
   padding-bottom: 1rem;
+}
+.lead {
+  font-size: .8em;
 }
 .btn-primary {
   background-color: #6648b1;
@@ -194,9 +205,9 @@ hr.light-100 {
 
 /*---Firefox Bug Fix --*/
 .carousel-item {
-  transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.2s ease;
   transition: transform 0.5s ease;
-  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.2s ease;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
 }
@@ -206,7 +217,17 @@ figure {
 }
 
 #fixed {
-  background-image: url('img/mac.png');
+  background-image: url('img/food.jpg');
+  height: 600px;
+  display: block;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+}
+
+#fixed1 {
+  background-image: url('img/keepclean.jpg');
   height: 600px;
   display: block;
   background-repeat: no-repeat;
